.. _changes:

PGXN Client changes log
-----------------------

pgxnclient 1.3.1
================

- Fixed error running ``pgxn`` with no argument (ticket #38).
- Ignore `.psqlrc` file in all commands (ticket #39).


pgxnclient 1.3
==============

- Use https by default to access the PGXN API.
- Dropped support for Python < 2.7 and Python 3 < 3.4.
- Logging information emitted on stderr instead of stdout.
- Exit with nonzero return code after command line parsing errors (ticket #23).
- Don't fail if some directories in the ``PATH`` are not readable (ticket #24).
- Don't file emitting non-ascii chars with stdout redirected (ticket #26).
- Fixed parsing of server version numbers with PostgreSQL beta versions
  (ticket #29).
- Use six to make the codebase portable between Python 2 and 3.


pgxnclient 1.2.1
================

- Fixed traceback on error when a dir doesn't contain META.json (ticket #19).
- Handle version numbers both with and without hyphen (ticket #22).


pgxnclient 1.2
==============

- Packages can be downloaded, installed, loaded specifying an URL
  (ticket #15).
- Added support for ``.tar`` files (ticket #17).
- Use ``gmake`` in favour of ``make`` for platforms where the two are
  distinct, such as BSD (ticket #14).
- Added ``--make`` option to select the make executable (ticket #16).


pgxnclient 1.1
==============

- Dropped support for Python 2.4.
- ``sudo`` is not invoked automatically: the ``--sudo`` option must be
  specified if the user has not permission to write into PostgreSQL's libdir
  (ticket #13). The ``--sudo`` option can also be invoked without argument.
- Make sure the same ``pg_config`` is used both by the current user and by
  sudo.


pgxnclient 1.0.3
================

- Can deal with extensions whose ``Makefile`` is created by ``configure``
  and with makefile not in the package root. Patch provided by Hitoshi
  Harada (ticket #12).


pgxnclient 1.0.2
================
